Moved the dragablz approach as far as was reasonable within the time constraint, going to test out docking framework from syncfusion next

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -106,6 +106,7 @@
     <Compile Include="Controls\DragablzItemsControlEx.cs" />
     <Compile Include="Controls\OpenSkyWindow.cs" />
     <Compile Include="Controls\TabablzControlEx.cs" />
+    <Compile Include="Controls\TabItemEx.cs" />
     <Compile Include="Converters\InvertThicknessConverter.cs" />
     <Compile Include="Converters\NavigationViewBitmapIconConverter.cs" />
     <Compile Include="OpenAPIs\OpenSkyService.cs" />
