--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -102,11 +102,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Controls\DragablzItemHelper.cs" />
-    <Compile Include="Controls\DragablzItemsControlEx.cs" />
+    <Compile Include="Controls\DockingAdapter.xaml.cs">
+      <DependentUpon>DockingAdapter.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Controls\DockItemEx.cs" />
+    <Compile Include="Controls\DocumentHeaderEx.cs" />
     <Compile Include="Controls\OpenSkyWindow.cs" />
-    <Compile Include="Controls\TabablzControlEx.cs" />
-    <Compile Include="Controls\TabItemEx.cs" />
     <Compile Include="Converters\InvertThicknessConverter.cs" />
     <Compile Include="Converters\NavigationViewBitmapIconConverter.cs" />
     <Compile Include="OpenAPIs\OpenSkyService.cs" />
@@ -158,13 +159,16 @@
       <DependentUpon>Main.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\Models\NavMenuItem.cs" />
-    <Compile Include="Views\Models\OpenSkyInterTabClient.cs" />
     <Compile Include="Views\Models\LoginNotificationViewModel.cs" />
     <Compile Include="Views\Models\MainViewModel.cs" />
     <Compile Include="Views\Models\StartupViewModel.cs" />
     <Compile Include="Views\Startup.xaml.cs">
       <DependentUpon>Startup.xaml</DependentUpon>
     </Compile>
+    <Page Include="Controls\DockingAdapter.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Pages\DataImport.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -182,10 +186,6 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Pages\Settings.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Themes\TabControls.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -296,9 +296,6 @@
     <PackageReference Include="DataGridExtensions">
       <Version>2.5.3</Version>
     </PackageReference>
-    <PackageReference Include="Dragablz">
-      <Version>0.0.3.223</Version>
-    </PackageReference>
     <PackageReference Include="Hardcodet.NotifyIcon.Wpf">
       <Version>1.1.0</Version>
     </PackageReference>
@@ -324,6 +321,21 @@
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.SfSkinManager.Wpf">
+      <Version>19.1.0.69</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Shared.WPF">
+      <Version>19.1.0.69</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Themes.FluentDark.WPF">
+      <Version>19.1.0.69</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF">
+      <Version>19.1.0.69</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.Tools.WPF">
+      <Version>19.1.0.69</Version>
     </PackageReference>
     <PackageReference Include="XDMessaging.Lite">
       <Version>5.0.6</Version>
