--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -342,6 +342,9 @@
     <PackageReference Include="Syncfusion.Tools.WPF">
       <Version>19.2.0.44</Version>
     </PackageReference>
+    <PackageReference Include="System.Data.SQLite">
+      <Version>1.0.114.4</Version>
+    </PackageReference>
     <PackageReference Include="TomsToolbox.Wpf">
       <Version>2.5.5</Version>
     </PackageReference>
