--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -110,12 +110,17 @@
     <Compile Include="Controls\DocumentHeaderEx.cs" />
     <Compile Include="Controls\OpenSkyPage.cs" />
     <Compile Include="Controls\OpenSkyWindow.cs" />
+    <Compile Include="Converters\NullItemToVisibilityConverter.cs" />
     <Compile Include="Converters\PieChartValueAdornerLabelConverter.cs" />
     <Compile Include="Converters\NavMenuHasChildrenConverter.cs" />
     <Compile Include="Converters\InvertThicknessConverter.cs" />
     <Compile Include="Converters\NavigationViewBitmapIconConverter.cs" />
     <Compile Include="Converters\PieChartColorConverter.cs" />
     <Compile Include="Converters\UtcTimeStampConverter.cs" />
+    <Compile Include="Extensions\EnumExtensions.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\AircraftType.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\AircraftTypeCategoryWithDescriptions.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\CountryWithDescriptions.cs" />
     <Compile Include="OpenAPIs\OpenSkyService.cs" />
     <Compile Include="OpenAPIs\OpenSkyServiceBase.cs" />
     <Compile Include="OpenAPIs\swagger.cs" />
@@ -324,7 +329,7 @@
       <Version>1.1.0</Version>
     </PackageReference>
     <PackageReference Include="JetBrains.Annotations">
-      <Version>2021.1.0</Version>
+      <Version>2021.2.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.NetAnalyzers">
       <Version>5.0.3</Version>
@@ -347,19 +352,22 @@
       <Version>13.0.1</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfChart.WPF">
-      <Version>19.2.0.44</Version>
+      <Version>19.2.0.48</Version>
+    </PackageReference>
+    <PackageReference Include="Syncfusion.SfInput.WPF">
+      <Version>19.2.0.48</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.SfSkinManager.Wpf">
-      <Version>19.2.0.44</Version>
+      <Version>19.2.0.48</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Shared.WPF">
-      <Version>19.2.0.44</Version>
+      <Version>19.2.0.48</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Themes.MaterialDark.WPF">
-      <Version>19.2.0.44</Version>
+      <Version>19.2.0.48</Version>
     </PackageReference>
     <PackageReference Include="Syncfusion.Tools.WPF">
-      <Version>19.2.0.44</Version>
+      <Version>19.2.0.48</Version>
     </PackageReference>
     <PackageReference Include="System.Data.SQLite">
       <Version>1.0.114.4</Version>
@@ -382,7 +390,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
-    <Folder Include="OpenAPIs\ModelExtensions\" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\OpenSkyLogo16.png" />
