--- a/OpenSky.Client/Properties/Settings.settings
+++ b/OpenSky.Client/Properties/Settings.settings
@@ -26,5 +26,11 @@
     <Setting Name="OpenSkyTokenUrl" Type="System.String" Scope="Application">
       <Value Profile="(Default)">http://localhost:5001/apptoken/9CACF3C5-7F77-4F40-8DF0-933798960271</Value>
     </Setting>
+    <Setting Name="WeightUnit" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
+    <Setting Name="FuelUnit" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
