Deletion of flight plans
Also added support for updating tab item headers and to close tabs from code

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Models\AirportClientPackageEntry.cs" />
     <Compile Include="Models\AirportClientPackageRoot.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Aircraft.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\FlightPlan.cs" />
     <Compile Include="Pages\FlightPlan.xaml.cs">
       <DependentUpon>FlightPlan.xaml</DependentUpon>
     </Compile>
