--- a/OpenSky.Client/Properties/Settings.settings
+++ b/OpenSky.Client/Properties/Settings.settings
@@ -32,5 +32,8 @@
     <Setting Name="FuelUnit" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="OpenSkyChangePasswordUrl" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">http://localhost:5001/changepassword</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
