Added most of my flight basics
Experimented with syncfusion datagrid but sticking to default one
Reduced planned departure time to 30 minutes from now (rounded up to next 5)

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -141,6 +141,7 @@
     <Compile Include="Models\AirportClientPackageEntry.cs" />
     <Compile Include="Models\AirportClientPackageRoot.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\Aircraft.cs" />
+    <Compile Include="OpenAPIs\ModelExtensions\Flight.cs" />
     <Compile Include="OpenAPIs\ModelExtensions\FlightPlan.cs" />
     <Compile Include="Pages\FlightPlan.xaml.cs">
       <DependentUpon>FlightPlan.xaml</DependentUpon>
@@ -492,6 +493,12 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\luggage16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\pause16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\departure16.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
