Added status icon for overdue position report

--- a/OpenSky.Client/OpenSky.Client.csproj
+++ b/OpenSky.Client/OpenSky.Client.csproj
@@ -507,6 +507,9 @@
     <Resource Include="Resources\save16.png" />
     <Resource Include="Resources\x16.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\pinquestion16.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PreBuildEvent>call "$(ProjectDir)configuration.bat" "$(ProjectDir)" "$(ConfigurationName)"
